--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="section-sm">
+<section class="section-sm pb-0">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center">
@@ -18,21 +18,23 @@
 
 {{ if .Site.Data.gallery.enable }}
 {{ with .Site.Data.gallery }}
-<section>
-  <div class="container-fluid px-0">
-    <div class="text-center">
-      <h4 class="widget-title">My Gallery</h4>
-    </div>
-    <div class="row no-gutters">
-      {{ range .gallery }}
-      <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-        <a href="{{ .image | absURL}}" class="venobox" data-gall="gallery"><img class="img-fluid w-100"
-            src="{{ .image | absURL}}" alt=""></a>
+{{ range .galleries }}
+  <section class="section-sm pb-0">
+    <div class="container-fluid px-0">
+      <div class="text-center">
+        <h4 class="widget-title">{{ .data.title }}</h4>
       </div>
-      {{ end }}
+      <div class="row no-gutters">
+        {{ range .data.gallery }}
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <a href="{{ .image | absURL}}" class="venobox" data-gall="gallery"><img class="img-fluid w-100"
+              src="{{ .image | absURL}}" alt=""></a>
+        </div>
+        {{ end }}
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+{{ end }}
 {{ end }}
 {{ end }}
 
