fix(contact): contact list validation

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -8,22 +8,28 @@
         <div class="content mb-4">
           {{ .Content }}
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
+          {{ if .Site.Params.mobile }}
           <div class="col-lg-4 small-post-border">
             <i class="ti-mobile h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Phone</h5>
             {{ .Site.Params.mobile }}
           </div>
+          {{end}}
+          {{ if .Site.Params.email }}
           <div class="col-lg-4 small-post-border">
             <i class="ti-email h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Email</h5>
             {{ .Site.Params.email }}
           </div>
+          {{end}}
+          {{ if .Site.Params.location }}
           <div class="col-lg-4 small-post-border">
             <i class="ti-location-pin h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Location</h5>
             {{ .Site.Params.location | markdownify }}
           </div>
+          {{end}}
         </div>
       </div>
     </div>
