--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -41,8 +41,8 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <h2 class="mb-4">Hi Write To Me</h2>
-        <form action="#" method="POST" class="row">
+        <h2 class="mb-4">{{.Site.Params.contactFormTitle}}</h2>
+        <form action="{{.Site.Params.contactFormAction}}" method="POST" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" id="name" name="name" placeholder="Your Name">
           </div>
