--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,7 +14,7 @@
           <ul class="navbar-nav mr-auto">
             {{ range .Site.Params.social }}
             <li class="nav-item">
-              <a class="nav-link" href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a>
+              <a class="nav-link" target="_blank" href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a>
             </li>
             {{ end }}
           </ul>
