feat(sidemenu): add show param promotion

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -50,7 +50,9 @@
     </ul>
   </div>
   <!-- advertisement -->
+  {{if .Site.Params.showPromotion}}
   <div class="widget">
     <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
   </div>
+  {{ end }}
 </div>
